kubernetes_files/mutate-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mwfr-kfp-mutating-webhook
webhooks:
- name: wfr-kfp-mutating-webhook.default.svc
  matchPolicy: Equivalent
  admissionReviewVersions: ["v1"]
  sideEffects: None
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods", "jobs"]
    scope: "Namespaced"
  failurePolicy: Ignore
  timeoutSeconds: 20
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lJV0VCUDcxbEFrQjR3RFFZSktvWklodmNOQVFFTEJRQXdGVEVUTUJFR0ExVUUKQXhNS2EzVmlaWEp1WlhSbGN6QWVGdzB5TkRFeE1qUXdPVEF5TkRSYUZ3MHpOREV4TWpJd09UQTNORFJhTUJVeApFekFSQmdOVkJBTVRDbXQxWW1WeWJtVjBaWE13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLCkFvSUJBUUM3MysyWXdkK1V2UGQ3OVZkRHlRdzVmS2s4YjN0Rmk1NjBrWkNzZHNnUXJFM3gyblpaVmJQNENvd2gKdzBKK0Vmb3N5eDFjTng4YjJUZVBHYWJyNDU3YzVpRmhCQklCU2tzSXhOY1pWSGx4VUZQWnllOEJTU215eG0vRwpLNzlzNFM5Njhxbz [...]
    service:
      namespace: default
      name: wfr-kfp-mutating-webhook
      path: /mutate
      port: 5000
